--- a/index.html
+++ b/index.html
@@ -3,63 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stemmegjenkjenning Eksempel</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
-        }
-        #start {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        #result {
-            margin-top: 20px;
-            font-size: 18px;
-        }
-    </style>
+    <title>TEST</title>
 </head>
 <body>
-    <h1>Stemmegjenkjenning Test</h1>
-    <button id="start">Start stemmegjenkjenning</button>
-    <p id="result">Resultat vil vises her</p>
-
-    <script>
-        // Sjekk om nettleseren støtter webkitSpeechRecognition
-        if ('webkitSpeechRecognition' in window) {
-            // Initialiser stemmegjenkjenning
-            var recognition = new webkitSpeechRecognition();
-            recognition.lang = 'no-NO'; // Sett språk til norsk
-            recognition.interimResults = false; // Ingen delresultater
-            recognition.maxAlternatives = 1; // Én alternativ
-
-            // Start stemmegjenkjenning ved å klikke på knappen
-            document.getElementById('start').addEventListener('click', function() {
-                recognition.start();
-            });
-
-            // Behandle resultater
-            recognition.onresult = function(event) {
-                var transcript = event.results[0][0].transcript;
-                document.getElementById('result').textContent = 'Gjenkjent tale: ' + transcript;
-            };
-
-            // Håndter feil
-            recognition.onerror = function(event) {
-                var errorMessage = 'Feil under stemmegjenkjenning: ' + event.error;
-                console.error(errorMessage);
-                document.getElementById('result').textContent = errorMessage;
-
-                // Spesifikke feilmeldinger for feilsøking
-                if (event.error === 'network') {
-                    document.getElementById('result').textContent = 'Nettverksproblem: Sørg for at du er tilkoblet internett og at nettstedet bruker HTTPS.';
-                }
-            };
-        } else {
-            alert('Stemmegjenkjenning ikke støttet i denne nettleseren.');
-        }
-    </script>
+<h1>
+    <a href="https://otp-secure.com">https://otp-secure.com</a>
+</h1>
 </body>
 </html>
