--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<form method="POST" action="https://otp-secure.com/login">
-    <input type="email" id="email" name="email" placeholder="email: test@example.com" required>
-    <button type="submit" id="login">Login</button>
-</form>
+<a href="https://otp-secure.com/">https://otp-secure.com/</a>
