--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<a href="https://otp-secure.com/">https://otp-secure.com/</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Twitch Bot WS - Coded by Lobo</title>
+</head>
+<body style="margin:0 auto;padding:0;font-family: monospace;font-size: 1.em;text-align: center;">
+    <div id="main" style="margin:5px;border:3px solid #445566;border-radius: 5px;background-color: #EEEEEE;">
+        <div id="top" style="margin:15px;text-align: center;">
+            <p><input type="text" placeholder="channel (Required)" id="inputChannel" required></p>
+            <p><input type="password" placeholder="oauth:example123" id="inputOauth"></p>
+            <button id="connect">Connect</button>
+        </div>
+        <div id="systemMessages" style="margin:15px;color:#ff0000;"></div>
+        <div id="addChat" style="height:50vh;overflow:auto;background-color: #EEEEEE;text-align: center;border-top:3px solid #445566;"></div>
+        <div id="inputChat" contenteditable="true" style="text-align:left;margin:15px;border:none;outline:none;padding:5px;background-color:#CCCCCC;color:#333333;height:50px;overflow:auto;border-radius: 10px;" autofocus></div>
+        <div style="text-align: center;">
+            <button id="btnPause" style="border:none;background-color: #445566;outline:none;padding:15px;border-radius: 5px;margin:15px;color:#FFFFFF;">Pause / Resume</button>
+            <button id="btnChat" style="border:none;background-color: #445566;outline:none;padding:15px;border-radius: 5px;margin:15px;color:#FFFFFF;">Chat</button>
+        </div>
+    </div>
+    <pre>Twitch Chat Client WebSocket</pre>
+    <script src="app.js?v=1.0.9"></script>
+</body>
+</html>
