--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitch Bot WS - Coded by Lobo</title>
-    <link rel="stylesheet" href="styles.css?v=2.0">
+    <link rel="stylesheet" href="styles.css?v=3.0">
 </head>
     <div id="main">
         <div id="chatWindow"></div>
         <div id="chatTools">
             <p>
-                <input type="text" id="newStreamer" placeholder="StreamerName:">
+                <input type="text" id="newStreamer" placeholder="StreamerName:" title="This will be the channel you join.">
             </p>
             <p>
                 <input type="text" id="newAuth" placeholder="Oauth:">
@@ -21,6 +21,6 @@
         </div>
         <div id="chatText"></div>
     </div>
-    <script src="app.js?v=2.0"></script>
+    <script src="app.js?v=3.0"></script>
 </body>
 </html>
