--- a/index.html
+++ b/index.html
@@ -3,24 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twitch Bot WS - Coded by Lobo</title>
-    <link rel="stylesheet" href="styles.css?v=4.0">
+    <title>Twitch Chat Client</title>
+    <link rel="stylesheet" href="styles.css?v=1.0">
 </head>
-    <div id="main">
-        <div id="chatWindow"></div>
-        <div id="chatTools">
-            <p>
-                <input type="text" id="newStreamer" placeholder="StreamerName:" title="This will be the channel you join.">
-            </p>
-            <p>
-                <input type="text" id="newAuth" placeholder="Oauth:">
-            </p>
-            <p>
-                <button id="connect">Connect</button> 
-            </p>
+<body>
+    <div id="container">
+        <div id="login">
+            <h1 style="color:#007bff;">X Twitch Client</h1>
+            <input type="text" id="newStreamer" placeholder="Streamer: (Example: Ninja)" title="Streamer: (Example: Ninja)">
+            <input type="text" id="newAuth" placeholder="OAuth Token: (Example: oauth:k34j5)" title="OAuth Token: (Example: oauth:k34j5)">
+            <button id="connect">Connect</button>
         </div>
-        <div id="chatText"></div>
+        <div id="chatWindow"></div>
     </div>
-    <script src="app.js?v=4.0"></script>
+    <div id="modToolsPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" id="closeModToolsPopup">&times;</span>
+            <p><button id="banUser">Ban User</button></p>
+            <p><button id="timeoutUser">Timeout User</button></p>
+            <p><input type="text" id="chatInput" placeholder="Type your message here..."></p>
+        </div>
+    </div>
+    <pre id="copyr">X Twitch Client v1.0 - Copyrights 2024 LoboSSL</pre>
+    <script src="app.js?v=1.0"></script>
 </body>
 </html>
