--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="login">
+            <h1 style="color:#007bff;">X Twitch Client</h1>
             <input type="text" id="newStreamer" placeholder="Streamer: (Example: Ninja)" title="Streamer: (Example: Ninja)">
             <input type="text" id="newAuth" placeholder="OAuth Token: (Example: oauth:k34j5)" title="OAuth Token: (Example: oauth:k34j5)">
             <button id="connect">Connect</button>
@@ -23,7 +24,6 @@
             <p><input type="text" id="chatInput" placeholder="Type your message here..."></p>
         </div>
     </div>
-    <pre id="copyr">X Twitch Client v1.0 - Copyrights 2024 LoboSSL</pre>
     <script src="app.js?v=1.0"></script>
 </body>
 </html>
