--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
         <div id="login">
             <h1 style="color:#007bff;">X Twitch Client</h1>
-            <p><input type="text" id="newStreamer" placeholder="Streamer: (Example: Ninja)" title="Streamer: (Example: Ninja)" value="nmplol"></p>
-            <p><input type="text" id="newAuth" placeholder="OAuth Token: (Example: oauth:k34j5)" title="OAuth Token: (Example: oauth:k34j5)" value="oauth:beusk8mvxow8vxsth38pbuacdlu24r"></p>
+            <p><input type="text" id="newStreamer" placeholder="Streamer: (Example: Ninja)" title="Streamer: (Example: Ninja)"></p>
+            <p><input type="text" id="newAuth" placeholder="OAuth Token: (Example: oauth:k34j5)" title="OAuth Token: (Example: oauth:k34j5)"></p>
             <p><button id="connect">Connect</button></p>
         </div>
         <div id="chatWindow"></div>
