--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-	<link rel="stylesheet" href="style.css?v=1.0">
+	<link rel="stylesheet" href="style.css?v=1.1">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Din Norske Dating Side - Wave.no</title>
+	<title>chatlinkup.com - Chat,Dating,Linkup</title>
 </head>
 <body>
 	<div id="container">
-		<div id="top">Wave.no</div>
+		<div id="top">chatlinkup.com</div>
 		<div id="left">
 			<div>
 				<p id="clients">Loading..</p>
@@ -17,7 +17,7 @@
 		</div>
 		<div id="middle-top">
 			<h2>Om Wave</h2>
-			<div>Dette er en platform for å finne nye venner, etc..Dette er en platform for å finne nye venner, etc.. TEST</div>
+			<div>Dette er en platform der du kan finne nye venner, eller din neste kjærlighet.</div>
 			<h2>Hjelp</h2>
 			<div id="help">
 				<div>/navn nyttNavn</div>
@@ -37,6 +37,6 @@
 		</div>
 	</div>
 </body>
-<script src="app.js?v=1.0"></script>
-<script src="chat.js?v=1.0"></script>
+<script src="app.js?v=1.1"></script>
+<script src="chat.js?v=1.1"></script>
 </html>
