--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-	<link rel="stylesheet" href="style.css?v=1.2">
+	<link rel="stylesheet" href="style.css?v=1.3">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>chatlinkup.com - Chat,Dating,Linkup</title>
@@ -16,12 +16,7 @@
 			</div>
 		</div>
 		<div id="middle-top">
-			<h2>Om Wave</h2>
-			<div>Dette er en platform der du kan finne nye venner, eller din neste kjærlighet.</div>
-			<h2>Hjelp</h2>
-			<div id="help">
-				<div>/navn nyttNavn</div>
-			</div>
+			<h3>Dette er en platform der du kan finne nye venner, eller din neste kjærlighet.</h3>>
 			<h2>Regler</h2>
 			<div>Ingen flood, eller spam er lov.</div>
 		</div>
@@ -37,6 +32,6 @@
 		</div>
 	</div>
 </body>
-<script src="app.js?v=1.1"></script>
-<script src="chat.js?v=1.1"></script>
+<script src="app.js?v=1.3"></script>
+<script src="chat.js?v=1.3"></script>
 </html>
