--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-	<link rel="stylesheet" href="style.css?v=1.3">
+	<link rel="stylesheet" href="style.css?v=1.5">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>chatlinkup.com - Chat,Dating,Linkup</title>
+	<title>chatlinkup.com - Chat,Dating,Linkup,Friends</title>
 </head>
 <body>
 	<div id="container">
@@ -16,22 +16,20 @@
 			</div>
 		</div>
 		<div id="middle-top">
-			<h3>Dette er en platform der du kan finne nye venner, eller din neste kjærlighet.</h3>>
-			<h2>Regler</h2>
-			<div>Ingen flood, eller spam er lov.</div>
+			<p>Chat</p>
+			<div id="chat"></div>
+			<p><textarea id="textArea" placeholder="Send en melding" autofocus></textarea></p>
+			<p><button id="buttonChat">CHAT</button></p>
 		</div>
 		<div id="middle-bottom">
 			<p>Privat Melding</p>
 			<div id="privatMelding">Ingen meldinger funnet.</div>
 		</div>
 		<div id="right">
-			<p>Chat</p>
-			<div id="chat"></div>
-			<p><textarea id="textArea" placeholder="Send en melding" autofocus></textarea></p>
-			<p><button id="buttonChat">CHAT</button></p>
+			<h3>Velkommen til chatlinkup.com</h3>
 		</div>
 	</div>
 </body>
-<script src="app.js?v=1.3"></script>
-<script src="chat.js?v=1.4"></script>
+<script src="app.js?v=1.5"></script>
+<script src="chat.js?v=1.5"></script>
 </html>
