--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-	<link rel="stylesheet" href="style.css?v=1.5">
+	<link rel="stylesheet" href="style.css?v=1.6">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>chatlinkup.com - Chat,Dating,Linkup,Friends</title>
@@ -16,20 +16,15 @@
 			</div>
 		</div>
 		<div id="middle-top">
-			<p>Chat</p>
 			<div id="chat"></div>
-			<p><textarea id="textArea" placeholder="Send en melding" autofocus></textarea></p>
+			<p><input type="text" id="textArea" placeholder="Send en melding" autofocus /></p>
 			<p><button id="buttonChat">CHAT</button></p>
 		</div>
-		<div id="middle-bottom">
-			<p>Privat Melding</p>
-			<div id="privatMelding">Ingen meldinger funnet.</div>
-		</div>
 		<div id="right">
-			<h3>Velkommen til chatlinkup.com</h3>
+			<div id="privatMelding">No new messages.</div>
 		</div>
 	</div>
 </body>
-<script src="app.js?v=1.5"></script>
-<script src="chat.js?v=1.5"></script>
+<script src="app.js?v=1.6"></script>
+<script src="chat.js?v=1.6"></script>
 </html>
