--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-	<link rel="stylesheet" href="style.css?v=1.6">
+	<link rel="stylesheet" href="style.css?v=1.7">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>chatlinkup.com - Chat,Dating,Linkup,Friends</title>
 </head>
 <body>
 	<div id="container">
-		<div id="top">chatlinkup.com</div>
+		<div id="top">
+			<div>Welcome to chatlinkup.com</div>
+		</div>
 		<div id="left">
 			<div>
 				<p id="clients">Loading..</p>
@@ -25,6 +27,6 @@
 		</div>
 	</div>
 </body>
-<script src="app.js?v=1.6"></script>
-<script src="chat.js?v=1.6"></script>
+<script src="app.js?v=1.7"></script>
+<script src="chat.js?v=1.7"></script>
 </html>
