--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-	<link rel="stylesheet" href="style.css?v=1.8">
+	<link rel="stylesheet" href="style.css?v=1.9">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>chatlinkup.com - Chat,Dating,Linkup,Friends</title>
@@ -23,10 +23,11 @@
 			<p><button id="buttonChat">CHAT</button></p>
 		</div>
 		<div id="right">
-			<div id="privatMelding">No new messages.</div>
+			<p>Requests</p>
+			<div id="requestChat"></div>
 		</div>
 	</div>
 </body>
-<script src="app.js?v=1.8"></script>
-<script src="chat.js?v=1.8"></script>
+<script src="app.js?v=1.9"></script>
+<script src="chat.js?v=1.9"></script>
 </html>
