--- a/index.html
+++ b/index.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-	<link rel="stylesheet" href="style.css?v=1.9">
+	<link rel="stylesheet" href="style.css?v=1.10">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>chatlinkup.com - Chat,Dating,Linkup,Friends</title>
+	<title>chatlinkup.com - Chat - Linkup</title>
 </head>
 <body>
 	<div id="container">
-		<div id="top">
-			<div>Welcome to chatlinkup.com</div>
-		</div>
 		<div id="left">
-			<div>
-				<p id="clients">Loading..</p>
-				<p id="users"></p>
-			</div>
-		</div>
-		<div id="middle-top">
-			<div id="chat"></div>
-			<p><input type="text" id="textArea" placeholder="Send en melding" autofocus /></p>
-			<p><button id="buttonChat">CHAT</button></p>
+			<div id="clients">Loading..</div>
+			<div id="users"></div>
 		</div>
 		<div id="right">
-			<p>Requests</p>
-			<div id="requestChat"></div>
+			<div id="chat"></div>
+			<div id="box">
+				<div><input type="text" id="textArea" placeholder="Send en melding" autofocus /></div>
+			</div>
 		</div>
 	</div>
 </body>
-<script src="app.js?v=1.9"></script>
-<script src="chat.js?v=1.9"></script>
+<script src="app.js?v=1.10"></script>
+<script src="chat.js?v=1.10"></script>
 </html>
