--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-	<link rel="stylesheet" href="style.css?v=1.10">
+	<link rel="stylesheet" href="style.css?v=1.11">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>chatlinkup.com - Chat - Linkup</title>
@@ -9,7 +9,7 @@
 <body>
 	<div id="container">
 		<div id="left">
-			<div id="clients">Loading..</div>
+			<div id="clients">Looking for users..</div>
 			<div id="users"></div>
 		</div>
 		<div id="right">
@@ -20,6 +20,6 @@
 		</div>
 	</div>
 </body>
-<script src="app.js?v=1.10"></script>
-<script src="chat.js?v=1.10"></script>
+<script src="app.js?v=1.11"></script>
+<script src="chat.js?v=1.11"></script>
 </html>
