--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-	<link rel="stylesheet" href="style.css?v=1.11">
+	<link rel="stylesheet" href="style.css?v=1.12">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>chatlinkup.com - Chat - Linkup</title>
@@ -15,11 +15,11 @@
 		<div id="right">
 			<div id="chat"></div>
 			<div id="box">
-				<div><input type="text" id="textArea" placeholder="Send en melding" autofocus /></div>
+				<div><input type="text" id="textArea" placeholder="Send a message" autofocus /></div>
 			</div>
 		</div>
 	</div>
 </body>
-<script src="app.js?v=1.11"></script>
-<script src="chat.js?v=1.11"></script>
+<script src="app.js?v=1.12"></script>
+<script src="chat.js?v=1.12"></script>
 </html>
