--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="style.css?v=1.13">
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>chatlinkup.com - Chat - Linkup</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Chatlinkup.com is the ultimate platform to connect and chat with people. Simple, easy to use, and fast. Join now to link up with others.">
+    <meta name="keywords" content="chat, linkup, online chat, connect, meet people, instant messaging">
+    <meta name="author" content="Chatlinkup.com">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+    <meta property="og:title" content="Chatlinkup.com - Chat - Linkup">
+    <meta property="og:description" content="Join Chatlinkup.com to chat and connect with others. Simple and easy-to-use online platform.">
+    <meta property="og:url" content="https://www.chatlinkup.com">
+    <meta property="og:type" content="website">
+    <title>Chatlinkup.com - Chat - Linkup</title>
+    <link rel="stylesheet" href="style.css?v=1.14">
 </head>
 <body>
-	<div id="container">
-		<div id="left">
-			<div id="clients">Looking for users..</div>
-			<div id="users"></div>
-		</div>
-		<div id="right">
-			<div id="chat"></div>
-			<div id="box">
-				<div><input type="text" id="textArea" placeholder="Send a message" autofocus /></div>
-			</div>
-		</div>
-	</div>
+    <div id="container">
+        <div id="left">
+            <div id="clients">Looking for users..</div>
+            <div id="users"></div>
+        </div>
+        <div id="right">
+            <div id="chat"></div>
+            <div id="box">
+                <div><input type="text" id="textArea" placeholder="Send a message" autofocus /></div>
+            </div>
+        </div>
+    </div>
 </body>
-<script src="app.js?v=1.13"></script>
-<script src="chat.js?v=1.13"></script>
+<script src="app.js?v=1.14"></script>
+<script src="chat.js?v=1.14"></script>
 </html>
