--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="author" content="Chatlinkup.com">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
-    <meta name="revisit-after" content="7 days">
-    <meta property="og:title" content="Chatlinkup.com - Chat - Linkup">
+    <meta name="revisit-after" content="1 days">
+    <meta property="og:title" content="Chatlinkup.com - CHAT - LINKUP - CRYPTED - SSL - NO DATABASE - NO LOGGING">
     <meta property="og:description" content="Join Chatlinkup.com to chat and connect with others. Simple and easy-to-use online platform.">
     <meta property="og:url" content="https://www.chatlinkup.com">
     <meta property="og:type" content="website">
     <title>Chatlinkup.com - Chat - Linkup</title>
-    <link rel="stylesheet" href="style.css?v=1.17">
+    <link rel="stylesheet" href="style.css?v=1.18">
 </head>
 <body>
     <div id="container">
@@ -27,9 +27,10 @@
             <div id="box">
                 <div><input type="text" id="textArea" placeholder="Send a message" autofocus /></div>
             </div>
+            <div><button id="close">CLOSE</button></div>
         </div>
     </div>
 </body>
-<script src="app.js?v=1.17"></script>
-<script src="chat.js?v=1.17"></script>
+<script src="app.js?v=1.18"></script>
+<script src="chat.js?v=1.18"></script>
 </html>
