crypted.chatlinkup.com
crypted.chatlinkup.com

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		let chatButton = document.getElementById("chatButton")
 
 		let room = window.location.pathname
-		let hostname = window.location.hostname
+		let hostname = "crypted.chatlinkup.com"
 		let adr = `wss://${hostname}`
 		let ws = new WebSocket(adr)
 
