--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>TODO LIST</title>
-	<link rel="stylesheet" href="design.css?v=1.22">
+	<link rel="stylesheet" href="design.css?v=1.23">
 </head>
 <body>
 	<div>
-		<p><button id="add" class="button">+</button></p>
+		<p><button id="add" class="button">NEW</button></p>
 	</div>
+	<h3>TODO LIST</h3>
 	<div id="form"></div>
 	<div id="result"></div>
-	<script src="app.js?v=1.22"></script>
+	<script src="app.js?v=1.23"></script>
 </body>
 </html>
