--- a/test.html
+++ b/test.html
@@ -13,14 +13,14 @@
           https://fliro.org/
      */
      async function generateQRCode() {
-          const response = await fetch("https://fliro.org/generate",{ mode: 'no-cors' });
+          const response = await fetch("https://fliro.org/generate");
           const data = await response.json();
 
           document.getElementById("qr-code").src = data.qrCode;
 
           const sessionId = data.sessionId;
           const interval = setInterval(async () => {
-               const res = await fetch(`https://fliro.org/verify/${sessionId}`,{ mode: 'no-cors' });
+               const res = await fetch(`https://fliro.org/verify/${sessionId}`);
                const result = await res.json();
 
                if(result.status === true) {
