--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>TODO LIST</title>
+	<title>www.ali-trafikkskole.org</title>
 	<link rel="stylesheet" href="design.css?v=1.34">
 </head>
 <body>
-	<div>
-		<p><button id="add" class="button">NEW</button></p>
-	</div>
-	<div id="form"></div>
-	<div id="result"></div>
-	<script src="app.js?v=1.34"></script>
+<h1>www.ali-trafikkskole.org</h1>
 </body>
 </html>
