--- a/index.html
+++ b/index.html
@@ -2,18 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css?version=1">
+    <link rel="stylesheet" href="styles.css?version=2">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>www.ali-trafikkskole.org - Trafikkskole - Kjøreskole</title>
 </head>
 <body>
-    <header id="top"><div id="topText">Velkommen til<br>Ali Trafikkskole<br>🚦</div></header>
-    <nav>
-        <span><a href="#">Pakke-priser</a></span>
-        <span><a href="#">Regler</a></span>
-        <span><a href="#">Teori</a></span>
-        <span><a href="#">Skilter</a></span>
-    </nav>
+    <header id="top"><div id="topText">Velkommen til<br>Ali Trafikkskole</div></header>
+    <nav id="menu"><span>=</span></nav>
     <section id="info">
         <div>
             <h1>Om Oss</h1>
@@ -53,6 +48,6 @@
         <p>www.ali-trafikkskole.org</p>
         <p>Utviklet og designet av &#169; Fliro.org</p>
     </footer>
-    <script src="app.js?version=1"></script>
+    <script src="app.js?version=2"></script>
 </body>
 </html>
