--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-error
+<!DOCTYPE html>
+<html lang="no">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css?version=4.2">
+    <title>www.ali-trafikkskole.org - Trafikkskole - Kjøreskole</title>
+</head>
+<body>
+    <div id="top">
+        <div id="logo">
+            <img src="img/logo.png"  id="logo_img" />
+        </div>
+        <div id="logo_text"><span id="logo_text_click">=</span></div>
+    </div>
+    <div id="green">
+        <div id="green_text">Velkommen!</div>
+    </div>
+    <div id="main">
+        <div>
+            <h2>Velkommen til Ali Trafikkskole!</h2>
+            <section>
+                <p>Vi er en dedikert trafikkskole midt i Oslo som skal hjelpe deg med å få førekortet på 1-2-3. Ring oss i dag eller send oss en e-post hvis du har noen spørsmål. Vi er her får å hjelpe deg med å bestå føreprøven.</p>
+            </section>
+        </div>
+        <div>
+            <h3>Kontakt</h3>
+            <section>
+                <p>&#9742; 91 92 94 12</p>
+                <p>&#9755; www.ali-trafikkskole.org</p>
+                <p>&#9993; post@ali-trafikkskole.org</p>
+                <p>&#128392; Ensjøveien 7</p>
+            </section>
+        </div>
+        <div>
+            <h3>Priser</h3>
+            <section>
+                <p>Time pris: 450,-</p>
+            </section>
+        </div>
+        <div>
+            <h3>test</h3>
+            <section>
+                <p>skriv text her</p>
+            </section>
+        </div>
+    </div>
+    <div id="bot">
+        <pre>www.ali-trafikkskole.org</pre>
+        <pre>Opphavsrett Fliro © 2025</pre>
+    </div>
+    <script src="app.js?version=4.2"></script>
+</body>
+</html>
