--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Siden er under arbeid!</h1>
-<h3>Fliro.org 2025</h3>
+<pre>www.ali-trafikkskole.org 2025</pre>
+<pre>Nettsiden er utviklet av &#169; Fliro.org</pre>
