--- a/index.html
+++ b/index.html
@@ -1,77 +1,1 @@
-<!DOCTYPE html>
-<html lang="no">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css?version=1.0.0">
-    <title>www.ali-trafikkskole.org - Trafikkskole - Kjøreskole - Ali</title>
-</head>
-<body>
-    <div id="top">
-        <div id="logo">
-            <img src="img/logo.png"  id="logo_img" />
-        </div>
-    </div>
-    <div id="menu"></div>
-    <div id="green">
-        <div id="green_text"><button id="bestill_top">Bestill Time</button></div>
-    </div>
-    <div id="velkommen">
-        <h2>Velkommen til Ali-Trafikkskole!</h2>
-        <section>
-            <p>Vi er en dedikert trafikkskole midt i Oslo som skal hjelpe deg med å få førekortet på 1-2-3. Ring oss i dag eller send oss en e-post hvis du har noen spørsmål. Vi er her får å hjelpe deg med å bestå føreprøven.</p>
-        </section>
-    </div>
-    <div>
-        <img src="img/mandag.webp" id="greencar">
-    </div>
-    <div id="main">
-        <div>
-            <p><img src="img/icons8-new-contact-64.png" id="icons"></p>
-            <section id="kontakt">
-                <b>91 92 94 12</b>
-                <p>www.ali-trafikkskole.org</p>
-                <p>post@ali-trafikkskole.org</p>
-            </section>
-        </div>
-        <div>
-            <p><img src="img/icons8-krone-64.png" id="icons"></p>
-            <section>
-                <p>Avtal betaling med din kjørelærer</p>
-            </section>
-        </div>
-        <div>
-            <p><img src="img/icons8-car-64 (1).png" id="icons"></p>
-            <section>
-                <p>Førekort Klasse B</p>
-                <p>Automat</p>
-            </section>
-        </div>
-        <div>
-            <p><img src="img/icons8-about-64.png" id="icons"></p>
-            <section>
-                <ul>
-                    <li>Kontakt oss.</li>
-                    <li>Vi setter opp en ledig time.</li>
-                    <li>Tut & Kjør!</li>
-                </ul>
-            </section>
-        </div>
-    </div>
-    <div id="formDiv">
-        <form action="mailto:post@ali-trafikkskole.org" method="post" enctype="text/plain" id="form">
-            <h2>Bestill Time</h2>
-            <p>Navn: <input type="text" name="Navn:"></p>
-            <p>E-post: <input type="text" name="E-post"></p>
-            <p>Telefon: <input type="text" name="Telefon"></p>
-            <p><input type="submit" value="Bestill"></p>
-        </form>
-    </div>
-    <div id="taxi"></div>
-    <div id="bot">
-        <pre>www.ali-trafikkskole.org &#169; 2025</pre>
-        <pre>Nettsiden er utviklet av Fliro.org</pre>
-    </div>
-    <script src="app.js?version=1.0.0"></script>
-</body>
-</html>
+Nettsiden er snart klar..
