--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <p><input type="text" name="Navn:" placeholder="Fornavn Etternavn"></p>
                     <p><input type="text" name="E-post" placeholder="Eksempel@epost.org"></p>
                     <p><input type="text" name="Telefon" placeholder="22 22 22 22"></p>
-                    <p><input type="submit" value="Bestill" id="btn"></p>
+                    <p><input type="submit" value="Bestill" id="btn" disabled></p>
                 </form>
             </section>
         </div>
