--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css?v=2.0.6">
+    <link rel="stylesheet" href="styles.css?v=1.1.1">
     <title>www.ali-trafikkskole.org - Trafikkskole - Kjøreskole - Ali</title>
 </head>
 <body>
@@ -34,23 +34,24 @@
         </div>
         <div>
             <h3>ali-trafikkskole</h3>
-            <p>Automat</p>
-            <p>Førekort Klasse B</p>
-            <p>Gunstig priser</p>
-            <p>Opplæring</p>
-            <p>Kjøretimer</p>
-            <p>Langkjøring</p>
-            <p>Mørkeskjøring</p>
-            <p>Kurs</p>
+            <p>- Automat</p>
+            <p>- Førekort Klasse B</p>
+            <p>- Gunstig priser</p>
+            <p>- Opplæring</p>
+            <p>- Kjøretimer</p>
+            <p>- Langkjøring</p>
+            <p>- Mørkeskjøring</p>
+            <p>- Kurs</p>
+            <p>( <u>Har du flere spørsmål, kontakt oss idag.</u> )</p>
         </div>
     </div>
     <div>
-        <img class="mandag" src="img/mandag.webp" alt="mandag"/>
+        <img class="mandag" src="img/visitkort.png" alt="mandag" />
     </div>
     <div id="bot">
         <pre>www.ali-trafikkskole.org</pre>
         <pre>Nettsiden ble laget av <u>Fliro.org</u></pre>
     </div>
-    <script src="app.js?v=1.0.0"></script>
+    <script src="app.js?v=1.1.1"></script>
 </body>
 </html>
