--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css?v=1.1.1">
-    <title>www.ali-trafikkskole.org - Trafikkskole - Kjøreskole - Ali</title>
+    <link rel="stylesheet" href="styles.css?v=1.1.2">
+    <title>www.ali-trafikkskole.org - Trafikkskole - Ali</title>
 </head>
 <body>
     <div id="top">
         <div id="top_text">
             <p id="top_ali">ALI-TRAFIKKSKOLE</p>
-            <p>
-                <a href="mailto:post@ali-trafikkskole.org">Bestill Kjøretime</a>
-            </p>
+            <a href="mailto:post@ali-trafikkskole.org">Bestill Kjøretime</a>
         </div>
     </div>
     <div id="main">
-        <div id="left_side">
+        <div>
             <h3>Om trafikkskolen</h3>
             <p>Vi er en dedikert trafikkskole midt i Oslo som skal hjelpe deg med å få førekortet på 1-2-3.</p>
             <p>Ring oss i dag eller send oss en e-post hvis du har noen spørsmål.</p>
@@ -42,16 +40,15 @@
             <p>- Langkjøring</p>
             <p>- Mørkeskjøring</p>
             <p>- Kurs</p>
-            <p>( <u>Har du flere spørsmål, kontakt oss idag.</u> )</p>
         </div>
     </div>
     <div>
-        <img class="mandag" src="img/visitkort.png" alt="mandag" />
+        <img src="img/visitkort.png?v=1.1.2" width="264px" height="164px" style="margin:15px auto;" />
     </div>
     <div id="bot">
         <pre>www.ali-trafikkskole.org</pre>
         <pre>Nettsiden ble laget av <u>Fliro.org</u></pre>
     </div>
-    <script src="app.js?v=1.1.1"></script>
+    <script src="app.js?v=1.1.2"></script>
 </body>
 </html>
