--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="design.css?v=16c1ec2f7a22bf7ee1f20ce5cafeb0f3">
-    <title>Ali-Trafikkskole - ali-trafikkskole.org - post@ali-trafikkskole.org - Trafikkskole - Oslo</title>
+    <link rel="stylesheet" href="design.css?v=644a21eda12751316f7f17b2bbd5df4fc11f1471">
+    <title>Ali-Trafikkskole - ali-trafikkskole.org - post@ali-trafikkskole.org - Ali Trafikkskole - OSLO 2025</title>
 </head>
 <body>
     <div class="center" id="meny"></div>
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="box center">
-            <img src="img/bg.webp?v=16c1ec2f7a22bf7ee1f20ce5cafeb0f3" class="banner" style="display:block;border:none;outline:none;margin:0;padding:0;" />
+            <img src="img/bg.webp?v=644a21eda12751316f7f17b2bbd5df4fc11f1471" class="banner" style="display:block;border:none;outline:none;margin:0;padding:0;" />
         </div>
         <div class="box">
             <div class="main">
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="main-box">
-                    <div class="main-box-inner center">
+                    <div class="main-box-inner left">
                         <h3>Vi Tilbyr</h3>
                         <p>- Mørkeskjøring</p>
                         <p>- Glattkjøring</p>
@@ -49,6 +49,7 @@
                         <h3>Bestill Time</h3>
                         <p>91 92 94 12</p>
                         <p><a href="mailto:post@ali-trafikkskole.org">Send Epost</a></p>
+                        <p><img src="img/visitkort.png?v=644a21eda12751316f7f17b2bbd5df4fc11f1471" width="300px" height="175px" /></p>
                         <p><input type="text" placeholder="Ola Nordmann" id="name" disabled></p>
                         <p><input type="text" placeholder="epost@epost.no" id="email" disabled></p>
                         <p>
@@ -62,10 +63,10 @@
                     </div>
                 </div>
                 <div class="main-box center">
-                    <p><img src="img/skilter.webp?v=16c1ec2f7a22bf7ee1f20ce5cafeb0f3" width="300px" height="300px" /></p>
-            </div>
-                <div class="main-box center">
-                        <p><img src="img/visitkort.png?v=16c1ec2f7a22bf7ee1f20ce5cafeb0f4" width="300px" height="200px" /></p>
+                    <div class="main-box-inner center">
+                        <h3>Skilter</h3>
+                        <p><img src="img/skilter.webp?v=644a21eda12751316f7f17b2bbd5df4fc11f1471" style="width:75%;height:auto;border:none;padding:0;margin:0 auto;outline:none;display: block;" /></p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -73,17 +74,11 @@
             <div class="bot">
                 <div>
                     <p>www.ali-trafikkskole.org</p>
-                    <p>Nettsiden ble utviklet av <a href="https://fliro.org/">Fliro.org</a></p>
-                    <div>
-                        <img src="img/css.png?v=16c1ec2f7a22bf7ee1f20ce5cafeb0f3" class="icons">
-                        <img src="img/html.png?v=16c1ec2f7a22bf7ee1f20ce5cafeb0f3" class="icons">
-                        <img src="img/js.png?v=16c1ec2f7a22bf7ee1f20ce5cafeb0f3" class="icons">
-                        <img src="img/nodejs.png?v=16c1ec2f7a22bf7ee1f20ce5cafeb0f3" class="icons">
-                    </div>
+                    <p>Nettsiden ble utviklet av <a href="https://fliro.org/?v=644a21eda12751316f7f17b2bbd5df4fc11f1471">Fliro.org</a></p>
                 </div>
             </div>
         </div>
     </div>
-    <script src="app.js?v=16c1ec2f7a22bf7ee1f20ce5cafeb0f3"></script>
+    <script src="app.js?v=644a21eda12751316f7f17b2bbd5df4fc11f1471"></script>
 </body>
 </html>
